<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/zeregtsol"
            android:hint="@string/zeregtsol" />


        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/zaadaghicheel"
            android:hint="@string/zaadag_hicheel" />


            <Button
                android:id="@+id/buttonBagsh"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hadgalah" />

            <TextView
                android:id="@+id/textNer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textNer" />
            <TextView
                android:id="@+id/textOvog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textOvog" />
            <TextView
                android:id="@+id/textHuis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textHuis" />
            <TextView
                android:id="@+id/textMergejil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textMergejil" />
            <TextView
                android:id="@+id/textZereg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="" />
            <TextView
                android:id="@+id/textHicheel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="" />
    </LinearLayout>



</FrameLayout>