<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ThirdFragment"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/surguuli"
            android:hint="@string/surguuli" />

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/angi"
            android:hint="@string/angi" />

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/kurs"
            android:hint="@string/kurs" />

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/golch"
            android:hint="@string/golch" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hadgalah" />
        <TextView
            android:id="@+id/textNer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textNer"
            android:layout_marginRight="1dp"/>
        <TextView
            android:id="@+id/textOvog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="1dp"
            android:text="@string/textOvog" />
        <TextView
            android:id="@+id/textHuis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="1dp"
            android:text="@string/textHuis" />
        <TextView
            android:id="@+id/textMergejil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="1dp"
            android:text="@string/textMergejil" />
        <TextView
            android:id="@+id/textSurguuli"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="1dp"
            android:text="" />
        <TextView
            android:id="@+id/textAngi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="1dp"
            android:text="" />
        <TextView
            android:id="@+id/textKurs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="1dp"
            android:text="" />
        <TextView
            android:id="@+id/textGolch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="1dp"
            android:text="" />

    </LinearLayout>




</FrameLayout>